# simple-unity-mcp

./: .gitignore  LICENSE  README.md
python/: pyproject.toml
python/src/unity_mcp/: __init__.py  server.py
python/tests/: test_server.py
unity/: package.json
unity/Editor/: PrefabCommands.cs  UnityMCP.Editor.asmdef  UnityWSServer.cs
unity/Tests/Editor/: UnityMCP.Editor.Tests.asmdef  UnityWSServerTests.cs
